# nmeacli

./: .gitignore  Cargo.toml  README.md  example.txt
.cargo/: config
