[package]
name = "nmeacli"
version = "0.1.0"
authors = ["Jihyun Yu <yjh0502@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nmea = { git = "https://github.com/AeroRust/nmea" }
tui = "0.9.5"
anyhow = "1.0.31"
termion = "1.5.5"
chrono = "0.4.11"
ublox = "0.2.0"
