[package]
name = "nmeacli"
version = "0.1.0"
authors = ["Jihyun Yu <yjh0502@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nmea = { git = "https://github.com/AeroRust/nmea" }
tui = "0.15.0"
anyhow = "1.0.41"
termion = "1.5.6"
chrono = "0.4.19"
ublox = "0.2.2"
lexical-core = "0.7.6"
